--- a/web/korp-frontend/src/app/components/products/product-list/product-list.component.html
+++ b/web/korp-frontend/src/app/components/products/product-list/product-list.component.html
@@ -60,6 +60,16 @@
         </td>
       </ng-container>
 
+      <!-- Coluna Ações -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let product">
+          <button mat-icon-button color="warn" (click)="deleteProduct(product)" [disabled]="loading">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
